# klodock

./: .gitignore  CLAUDE.md  QA_TEST_PROMPT.md  README-full.md  README-full.txt  README.md  SPIKE-RESULTS.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.claude/: launch.json  start-dev.cmd  start-website.cmd
.github/workflows/: build.yml  compat.yml  pages.yml  release.yml  test.yml
docs/: index.html  terms.html
e2e/: accessibility.e2e.ts  autostart.spec.ts  channel-setup.spec.ts  resume-wizard.spec.ts  run.sh  secret-lifecycle.spec.ts  setup-wizard.spec.ts  setup.ts  tsconfig.json  uninstall.spec.ts  wizard-walkthrough.e2e.ts
e2e/helpers/: test-env.ts
e2e/mocks/: tauri.ts
e2e/tests/: accessibility.test.ts  channels.test.ts  chat.test.ts  navigation.test.ts  overview.test.ts  personality.test.ts  settings.test.ts  skills.test.ts  updates.test.ts
scripts/: clean-install-test.sh  create-discussions.mjs  e2e-clean-test.sh  e2e-test.mjs  generate-pdf.mjs  md-to-pdf.mjs  pre-commit  qa-test.sh  stress-test.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  bundled-skills.json  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: klodock.key.pub
src-tauri/spike/: Cargo.toml  e2e_verify.rs  spike_daemon.rs  spike_keychain.rs  spike_node.rs  stress_test.rs  test_node_install.rs  test_ollama_auth.rs  test_real_key.rs
src-tauri/src/: lib.rs  main.rs  paths.rs  tray.rs
src-tauri/src/chat/: proxy.rs
src-tauri/src/clawhub/: mod.rs  registry.rs  safety.rs
src-tauri/src/config/: env.rs  mod.rs  openclaw_json.rs  settings.rs  soul.rs
src-tauri/src/installer/: mod.rs  node.rs  ollama.rs  openclaw.rs  skills.rs  uninstall.rs
src-tauri/src/process/: activity.rs  daemon.rs  health.rs  mod.rs
src-tauri/src/process/autostart/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/secrets/: keychain.rs
src-tauri/src/setup/: mod.rs  setup_state.rs
src-tauri/src/update/: mod.rs  openclaw_update.rs  skill_update.rs
src-tauri/tests/: autostart_test.rs  config_test.rs  daemon_test.rs  installer_test.rs  keychain_test.rs  setup_state_test.rs  uninstall_test.rs
src-tauri/tests/fixtures/: README
src/__tests__/: setup.ts
src/__tests__/components/: SafetyBadge.test.tsx  ToneSlider.test.tsx
src/__tests__/lib/: wizard-state.test.ts
src/__tests__/wizard/: ModelProvider.test.tsx  Personality.test.tsx
src/components/: ChannelCard.tsx  Chat.tsx  KloDockLogo.tsx  ProgressBar.tsx  ProviderCard.tsx  SafetyBadge.tsx  SkillCard.tsx  StatusIndicator.tsx  Toast.tsx  ToneSlider.tsx
src/dashboard/: ComingSoon.tsx  DashboardChannels.tsx  DashboardChat.tsx  DashboardLayout.tsx  DashboardPersonality.tsx  DashboardSettings.tsx  DashboardSkills.tsx  DashboardUpdates.tsx  Overview.tsx
src/lib/: friendly-error.ts  tauri.ts  templates.ts  types.ts  wizard-state.ts
src/styles/: tailwind.css
src/wizard/: Channels.tsx  Dependencies.tsx  Done.tsx  Install.tsx  ModelProvider.tsx  Personality.tsx  Skills.tsx  Welcome.tsx  WizardLayout.tsx
website/: index.html  terms.html
