[package]
name = "klodock"
version = "0.1.0"
description = "Desktop GUI for OpenClaw — zero terminal, zero complexity"
authors = ["Scott Converse"]
license = "MIT"
repository = "https://github.com/scottconverse/klodock"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "klodock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tokio = { version = "1", features = ["full"] }
keyring = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
thiserror = "2"
dirs = "6"
which = "7"
semver = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
spike = []

[[bin]]
name = "spike_node"
path = "src/bin/spike_node.rs"
required-features = ["spike"]

[[bin]]
name = "spike_install"
path = "src/bin/spike_install.rs"
required-features = ["spike"]

[[bin]]
name = "spike_keychain"
path = "src/bin/spike_keychain.rs"
required-features = ["spike"]

[[bin]]
name = "spike_kc2"
path = "src/bin/spike_kc2.rs"
required-features = ["spike"]

[[bin]]
name = "spike_dpapi"
path = "src/bin/spike_dpapi.rs"
required-features = ["spike"]

[[bin]]
name = "spike_daemon"
path = "src/bin/spike_daemon.rs"
required-features = ["spike"]
