[package]
name = "klodock"
version = "1.3.0"
description = "Desktop GUI for OpenClaw — zero terminal, zero complexity"
authors = ["Scott Converse"]
license = "MIT"
repository = "https://github.com/scottconverse/klodock"
edition = "2021"
rust-version = "1.77.2"
default-run = "klodock"

[lib]
name = "klodock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
keyring = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
thiserror = "2"
dirs = "6"
which = "7"
tauri-plugin-single-instance = "2"
semver = "1"
tokio-tungstenite = { version = "0.26", features = ["connect", "native-tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
