[package]
name = "klodock-spike"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
klodock = { path = "..", package = "klodock" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
dirs = "6"
sha2 = "0.10"
which = "7"

[[bin]]
name = "stress_test"
path = "stress_test.rs"

[[bin]]
name = "e2e_verify"
path = "e2e_verify.rs"

[[bin]]
name = "test_node_install"
path = "test_node_install.rs"

[[bin]]
name = "spike_node"
path = "spike_node.rs"

[[bin]]
name = "spike_install"
path = "spike_install.rs"

[[bin]]
name = "spike_keychain"
path = "spike_keychain.rs"

[[bin]]
name = "spike_kc2"
path = "spike_kc2.rs"

[[bin]]
name = "spike_dpapi"
path = "spike_dpapi.rs"

[[bin]]
name = "spike_daemon"
path = "spike_daemon.rs"

[[bin]]
name = "test_real_key"
path = "test_real_key.rs"

[[bin]]
name = "test_auth_flow"
path = "test_auth_flow.rs"

[[bin]]
name = "test_anthropic"
path = "test_anthropic.rs"

[[bin]]
name = "test_ollama_auth"
path = "test_ollama_auth.rs"
